polkadot/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    #kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/websocket-services: "polkadot-archive-service"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "86400"  # 24 hours
    nginx.ingress.kubernetes.io/proxy-send-timeout: "86400"  # 24 hours
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"  # 10 minutes
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/upstream-keepalive-timeout: "86400"  # 24 hours
    nginx.ingress.kubernetes.io/upstream-keepalive-connections: "32"  # Max keepalive connections
    #nginx.ingress.kubernetes.io/connection-proxy-header: "upgrade"
    #nginx.ingress.kubernetes.io/proxy-next-upstream: "error timeout invalid_header http_500 http_502 http_503 http_504"
    nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: "0"  # No timeout for next upstream
    nginx.ingress.kubernetes.io/proxy-next-upstream-tries: "0"
  name: polkadot-ingress-archive
  namespace: polkadot
spec:
  ingressClassName: nginx
  rules:
  - host: hyperbridge-polkadot-rpc.blockops.network #TODO: not in used. should be removed, this is accessed using envoy.
    http:
      paths:
      - backend:
          service:
            name: polkadot-archive-service
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
